cursos/desafio-final-dk8s/aulas/apresentacao-do-desafio-final-dk8s/projetos/desafio-final-dk8s/semana-3/k8s/locust/locust-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
  namespace: tipsbank-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
        - name: locust
          image: romulow22/tipsbank-locust:v7.0.0
          args:
            - -f
            - /mnt/locust/locustfile.py
            - --host
            - http://api-transacoes.tipsbank-transacoes.svc.cluster.local:8080
            - --web-base-path
            - /locust
          ports:
            - containerPort: 8089
              name: web
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: tipsbank-monitoring
spec:
  selector:
    app: locust
  ports:
    - name: web
      port: 8089
      targetPort: 8089
